# vit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tests.cpp  train.cpp  vit.cpp  vit.h
benchmark/: README.md  vit_pt_lucidrains.py  vit_pt_schedule.sh  vit_pytorch.py
docs/dev/: NOTES.md
vit/: pt.py  pt_ext.py  vit.cpp  vit.h
